--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
 	<meta charset='utf-8' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+	<script src="jquery-1.9.1.js"></script>
+	<script src="index.js"></script>
 	<title>Sudhanshu Mishra</title>
 </head>
 <body style="margin:0px;overflow-x:hidden;overflow-y:hidden;font-family:tahoma;font-size:12px;color:black;">
+  <div id="cover" style="position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.9);z-index:1;" align="center">
+	<div id="video" style="position:absolute;margin-left:34%;margin-top:12%;">
+		<video width="500" height="300" controls>
+			<source src="divyansh.mp4" type="video/mp4">
+			<source src="divyansh.ogg" type="video/ogg">
+			Your browser does not support the video tag.
+</video>
+	</div>
+  </div>
   <header style = "width:100%;height:60px;background:brown;padding-top:10px;">
  	 <p style="margin-left:20px;font-family:tahoma;font-size:25px;font-weight:bold; color:white" id="helloworld">Hello World</p>
   </header>
@@ -29,6 +39,7 @@
 		
 	</div> 
  </div>
+		
  
 </body>
 </html>
