--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<title>Sudhanshu Mishra</title>
 </head>
 <body style="margin:0px;overflow-x:hidden;overflow-y:hidden;font-family:tahoma;font-size:12px;color:black;">
-  <div id="cover" style="position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.9);z-index:1;" align="center">
-	<div id="video" style="position:absolute;margin-left:34%;margin-top:12%;">
-		<video width="500" height="300" controls>
-			<source src="divyansh.mp4" type="video/mp4">
-			<source src="divyansh.ogg" type="video/ogg">
-			Your browser does not support the video tag.
-</video>
+  <div id="cover" style="position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.95);z-index:1;" align="center">
+	
+  
+	<div id="video" style="position:absolute;margin-left:31%;margin-top:18%;">
+		<h1 style="color:white;font-size:28pt;font-family:cambria;">Something's <span id="t1">coming</span> <span id="t2" >up</span> <span id="t3" style="color:yellow">soon</span>...</h1>
+		<p style="color:white;float:right;font-size:10px;font-family:tahoma;">Press Esc to close</p>
 	</div>
+	
   </div>
   <header style = "width:100%;height:60px;background:brown;padding-top:10px;">
  	 <p style="margin-left:20px;font-family:tahoma;font-size:25px;font-weight:bold; color:white" id="helloworld">Hello World</p>
