--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="jquery-1.9.1.js"></script>
 	<script src="index.js"></script>
 	<title>Sudhanshu Mishra</title>
+	<link rel="shortcut icon" href="fav.png" type="image/x-icon" />
 </head>
 <body style="margin:0px;overflow-x:hidden;overflow-y:hidden;font-family:tahoma;font-size:12px;color:black;">
   <div id="cover" style="position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.95);z-index:1;" align="center">
