--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
   </div>
   <header style = "width:100%;height:60px;background:brown;padding-top:10px;">
- 	 <p style="margin-left:20px;font-family:tahoma;font-size:25px;font-weight:bold; color:white" id="helloworld">Hello World</p>
+ 	 <p style="margin-left:20px;font-family:tahoma;font-size:25px;font-weight:bold; color:white" id="helloworld">Hello_World</p>
   </header>
   <div style="position:relative;height:500px;font-size:14px;width:100%;padding-left:20px;color:rgb(100,0,110);" id="main">
   	<br>
