uploaded shoutpad to mrsud.github.com

--- a/index.html
+++ b/index.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset='utf-8' />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<script src="jquery-1.9.1.js"></script>
-	<script src="index.js"></script>
-	<title>Sudhanshu Mishra</title>
-	<link rel="shortcut icon" href="fav.png" type="image/x-icon" />
+<title>ShoutPad</title>
+<!--meta http-equiv="refresh" content="1"-->
+<script src="jquery-1.9.1.js"></script>
+<script type='text/javascript' src='jquery.easing.1.2.js'></script>
+<script type="text/javascript" src="index.js"></script>
+<script type='text/javascript' src='jquery.circulate.js'></script>
+<link rel="stylesheet" type="text/css" href="index.css" />
 </head>
-<body style="margin:0px;overflow-x:hidden;overflow-y:hidden;font-family:tahoma;font-size:12px;color:black;">
-  <div id="cover" style="position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.95);z-index:1;" align="center">
-	
-  
-	<div id="video" style="position:absolute;margin-left:31%;margin-top:18%;">
-		<h1 style="color:white;font-size:28pt;font-family:cambria;">Something's <span id="t1">coming</span> <span id="t2" >up</span> <span id="t3" style="color:yellow">soon</span>...</h1>
-		<p style="color:white;float:right;font-size:10px;font-family:tahoma;">Press Esc to close</p>
+<body style="font-family:tahoma;margin:0px;color:white;background:black;overflow-x:hidden;overflow-y:hidden;">
+	<div id="cover" style="position:fixed;width:100%;height:100%;background:rgba(0,0,0,1);z-index:1;" align="center">
+		<div class="carved" style="font-family:Tahoma;;z-index:1;margin-top:10%;font-size:90px;">
+					<p><!--span style="color:rgb(140,140,255);font-size:90px;"-->Shout<!--/span><span style="color:rgb(220,220,220);font-size:90px;"-->Pad<!--/span-->
+			<span></span></p>
+		</div>
+			
+		<!--div id="sphere-area" style="margin-left:48.5%;margin-top:4%;position:absolute;">
+            <img style="display:none;margin-left:45%;position:absolute;" width="25px" height = "25px" src="images/ball-orange.png" alt="ball" id="orange-ball" />
+
+            <img style="display:none;margin-left:45%;position:absolute;" width="25px" height = "25px" src="images/ball-blue.png" id="blue-ball" alt="" />
+            <!--img style="display:none;margin-left:45%;position:absolute;" width="80px" height = "80px" src="images/ball-green.png" id="green-ball" alt="" /-->
+        <!--/div-->
+  			<!--div id="cred" style="float:right;margin-right:100px;margin-top:26%;font-size:30px;color:white;font-family:cambria;">
+				Developed By: Team Backstage
+		</div-->
+			
+		
 	</div>
+
 	
-  </div>
-  <header style = "width:100%;height:60px;background:brown;padding-top:10px;">
- 	 <p style="margin-left:20px;font-family:tahoma;font-size:25px;font-weight:bold; color:white" id="helloworld">Hello World</p>
-  </header>
-  <div style="position:relative;height:500px;font-size:14px;width:100%;padding-left:20px;color:rgb(100,0,110);" id="main">
-  	<br>
-  	<br>
-  	<p >My name is <b><a title="My Facebook link" href="http://www.facebook.com/mrsud" style="text-decoration:none;color:black;">Sudhanshu Mishra</a></b>
-	and I am a computer programmer also having some experience in web development.</p> 
-  	<p>This is my GitHub web page where I'll be interacting with you regarding my works.</p>
-	<img src="geek.jpg" style="position:absolute;top:25px;left:87%;"/>
-	<img width="1325" height="500" src="lazy_boy.gif"/>
-	<div style="position:absolute;bottom:0px;padding-left:0px;">
-	<h3>Contact Me</h3>
-		</p>Email: mrsud94@gmail.com</p>
-		<a href="http://www.github.com/mrsud" style="padding:3px;text-decoration:none;color:black;background:rgb(220,220,250);border:1px solid blue;-webkit-border-radius:3px;moz-border-radius:3px;border-radius:3px;"><b>Fork me</b></a>
-		<br><br>
-		<a href="http://lifelesscodes.blogspot.com" style="padding:3px;text-decoration:none;color:black;background:rgb(220,220,250);border:1px solid blue;-webkit-border-radius:3px;moz-border-radius:3px;border-radius:3px;"><b>My Blog</b></a>
-		<br><br>
-		<a href="http://www.twitter.com/mrsudt" style="padding:3px;text-decoration:none;color:black;background:rgb(220,220,250);border:1px solid blue;-webkit-border-radius:3px;moz-border-radius:3px;border-radius:3px;"><b>Follow me</b></a>
+	<div class="carved" style="font-size:30px;float:right;margin-right:0px;margin-top:10px;width:100%;text-align:right;padding-right:10px;margin-top:0px;height:40px;padding-top:5px;">
+		ShoutPad
+	</div>
+	<br><br><br>
+	<div id="display" style="font-family:arial;width:98.3%;height:630px;float:left;margin-left:40px;font-size:50px;word-wrap:break-word;overflow-y:hidden;">
 		
-	</div> 
- </div>
-		
- 
+	</div>
+	<div class="" id="updates">
+
+	</div>
+
 </body>
 </html>
