updated with capastr

--- a/index.html
+++ b/index.html
@@ -1,45 +1,23 @@
-<!DOCTYPE html>
+<!doctype HTML>
 <html>
 <head>
-<title>ShoutPad</title>
-<!--meta http-equiv="refresh" content="1"-->
+<title>CapaStr</title>
 <script src="jquery-1.9.1.js"></script>
-<script type='text/javascript' src='jquery.easing.1.2.js'></script>
 <script type="text/javascript" src="index.js"></script>
-<script type='text/javascript' src='jquery.circulate.js'></script>
 <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
-<body style="font-family:tahoma;margin:0px;color:white;background:black;overflow-x:hidden;overflow-y:hidden;">
-	<div id="cover" style="position:fixed;width:100%;height:100%;background:rgba(0,0,0,1);z-index:1;" align="center">
-		<div class="carved" style="font-family:Tahoma;;z-index:1;margin-top:10%;font-size:90px;">
-					<p><!--span style="color:rgb(140,140,255);font-size:90px;"-->Shout<!--/span><span style="color:rgb(220,220,220);font-size:90px;"-->Pad<!--/span-->
-			<span></span></p>
-		</div>
-			
-		<!--div id="sphere-area" style="margin-left:48.5%;margin-top:4%;position:absolute;">
-            <img style="display:none;margin-left:45%;position:absolute;" width="25px" height = "25px" src="images/ball-orange.png" alt="ball" id="orange-ball" />
-
-            <img style="display:none;margin-left:45%;position:absolute;" width="25px" height = "25px" src="images/ball-blue.png" id="blue-ball" alt="" />
-            <!--img style="display:none;margin-left:45%;position:absolute;" width="80px" height = "80px" src="images/ball-green.png" id="green-ball" alt="" /-->
-        <!--/div-->
-  			<!--div id="cred" style="float:right;margin-right:100px;margin-top:26%;font-size:30px;color:white;font-family:cambria;">
-				Developed By: Team Backstage
-		</div-->
-			
-		
+<body>
+	<div id="wrapper">
+		<p style="text-align:center;font-size:50px;"/><strong>Capa<span style="color:rgb(255,100,100);">Str</span><span style="font-size:12px;">&nbsp;Beta</span></strong></p>
+		<table  style="padding-left:50px;margin-top:200px;">
+			<tr>
+				<td><img width="200" height="150" src="images/apple.jpg" /></td>
+				<td style="padding-left:50px;"><img width="150" height="150" src="images/android.gif" /></td>
+				<td><img width="300" height="200" src="images/blackberry.jpg" /></td>
+				<td><img width="100" height="100" src="images/windows.png" /></td>
+				<td style="padding-left:100px;"><img width="200" height="200" src="images/symbian.png" /></td>
+			</tr>
+		</table>
 	</div>
-
-	
-	<div class="carved" style="font-size:30px;float:right;margin-right:0px;margin-top:10px;width:100%;text-align:right;padding-right:10px;margin-top:0px;height:40px;padding-top:5px;">
-		ShoutPad
-	</div>
-	<br><br><br>
-	<div id="display" style="font-family:arial;width:98.3%;height:630px;float:left;margin-left:40px;font-size:50px;word-wrap:break-word;overflow-y:hidden;">
-		
-	</div>
-	<div class="" id="updates">
-
-	</div>
-
 </body>
 </html>
