--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
 </head>
 <body>
 	<div id="wrapper">
-		<p style="text-align:center;font-size:50px;"/><strong>Capa<span style="color:rgb(255,100,100);">Str</span><span style="font-size:12px;">&nbsp;Beta</span></strong></p>
-		<table  style="padding-left:50px;margin-top:200px;">
-			<tr>
-				<td><img width="200" height="150" src="images/apple.jpg" /></td>
-				<td style="padding-left:50px;"><img width="150" height="150" src="images/android.gif" /></td>
-				<td><img width="300" height="200" src="images/blackberry.jpg" /></td>
-				<td><img width="100" height="100" src="images/windows.png" /></td>
-				<td style="padding-left:100px;"><img width="200" height="200" src="images/symbian.png" /></td>
-			</tr>
-		</table>
+		<p style="text-align:center;font-size:50px;margin-top:100px;"/>Pi Rho Alpha Research Pvt. Ltd.</p>
 	</div>
 </body>
 </html>
