--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <title>CapaStr</title>
 <script src="jquery-1.9.1.js"></script>
 <script type="text/javascript" src="index.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Cuprum' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
 	<div id="wrapper">
-		<p style="text-align:center;font-size:50px;margin-top:100px;"/>Pi Rho Alpha Research Pvt. Ltd.</p>
+		<p style="text-align:center;font-size:50px;margin-top:150px;font-family:Cuprum;"/>Pi Rho Alpha Research Pvt. Ltd.</p>
 	</div>
 </body>
 </html>
