--- a/index.html
+++ b/index.html
@@ -12,4 +12,10 @@
 		<p style="text-align:center;font-size:50px;margin-top:100px;font-family:Cuprum;color:white;"/>PiRhoAlpha Research Pvt. Ltd.</p>
 	</div>
 </body>
+<style>
+body{
+	
+	filter: blur(5px) brightness(0.5);
+}
+</style>
 </html>
