--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 <head>
-<title>Pi Rho Alpha</title>
+<title>PiRhoAlpha Research</title>
 <script src="jquery-1.9.1.js"></script>
 <script type="text/javascript" src="index.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Cuprum' rel='stylesheet' type='text/css'>
