--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body style="width: 100%;
-            height:100%;
+            height:700px;
             padding:0px;
             margin:0px;
             overflow: hidden;
