--- a/index.html
+++ b/index.html
@@ -17,9 +17,56 @@
               margin-right:1em;
               color:#FFFFFF;
               text-decoration: none;"
+        target="_blank"
+        href="https://www.facebook.com/Mrsud">
+            <div>Facebook</div>
+    </a>
+    <a style="float:right;
+              margin-top:0.6em;
+              margin-right:1em;
+              color:#FFFFFF;
+              text-decoration: none;"
+        target="_blank"
+        href="https://plus.google.com/+SudhanshuMishra94/">
+            <div>Google+</div>
+    </a>
+    <a style="float:right;
+              margin-top:0.6em;
+              margin-right:1em;
+              color:#FFFFFF;
+              text-decoration: none;"
+        target="_blank"
+        href="https://www.linkedin.com/in/sudmishra">
+            <div>LinkedIn</div>
+    </a>
+    <a style="float:right;
+              margin-top:0.6em;
+              margin-right:1em;
+              color:#FFFFFF;
+              text-decoration: none;"
+        target="_blank"
+        href="https://twitter.com/debugger22">
+            <div>Twitter</div>
+    </a>
+    <a style="float:right;
+              margin-top:0.6em;
+              margin-right:1em;
+              color:#FFFFFF;
+              text-decoration: none;"
+        target="_blank"
         href="http://blog.sudhanshumishra.in">
             <div>Blog</div>
     </a>
+    <a style="float:right;
+              margin-top:0.6em;
+              margin-right:1em;
+              color:#FFFFFF;
+              text-decoration: none;"
+        target="_blank"
+        href="https://github.com/debugger22">
+            <div>GitHub</div>
+    </a>
+
 </div>
 <div style="width:100%;height:4px;background:#F1F14E"></div>
     <iframe src="http://osrc.dfm.io/debugger22/" style="width:100%;height:100%;border:none;"></iframe>
