--- a/index.html
+++ b/index.html
@@ -1,74 +1,48 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-<head>
-<title>Sudhanshu Mishra</title>
-<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-<link type="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css"></link>
-</head>
-<body style="width: 100%;
-            height:700px;
-            padding:0px;
-            margin:0px;
-            overflow: hidden;
-            font-family:Roboto;">
-<div style="width:100%;height:3em;background:#85D6E4;">
-    <a style="float:right;
-              margin-top:0.6em;
-              margin-right:1em;
-              color:#FFFFFF;
-              text-decoration: none;"
-        target="_blank"
-        href="https://www.facebook.com/Mrsud">
-            <div>Facebook</div>
-    </a>
-    <a style="float:right;
-              margin-top:0.6em;
-              margin-right:1em;
-              color:#FFFFFF;
-              text-decoration: none;"
-        target="_blank"
-        href="https://plus.google.com/+SudhanshuMishra94/">
-            <div>Google+</div>
-    </a>
-    <a style="float:right;
-              margin-top:0.6em;
-              margin-right:1em;
-              color:#FFFFFF;
-              text-decoration: none;"
-        target="_blank"
-        href="https://www.linkedin.com/in/sudmishra">
-            <div>LinkedIn</div>
-    </a>
-    <a style="float:right;
-              margin-top:0.6em;
-              margin-right:1em;
-              color:#FFFFFF;
-              text-decoration: none;"
-        target="_blank"
-        href="https://twitter.com/debugger22">
-            <div>Twitter</div>
-    </a>
-    <a style="float:right;
-              margin-top:0.6em;
-              margin-right:1em;
-              color:#FFFFFF;
-              text-decoration: none;"
-        target="_blank"
-        href="http://blog.sudhanshumishra.in">
-            <div>Blog</div>
-    </a>
-    <a style="float:right;
-              margin-top:0.6em;
-              margin-right:1em;
-              color:#FFFFFF;
-              text-decoration: none;"
-        target="_blank"
-        href="https://github.com/debugger22">
-            <div>GitHub</div>
-    </a>
+	<head>
+		<title>Sudhanshu Mishra</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="Personal website of Sudhanshu Mishra" />
+		<meta name="keywords" content="sudhanshu mishra|personal website|debugger22" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
 
-</div>
-<div style="width:100%;height:4px;background:#F1F14E"></div>
-    <iframe src="http://osrc.dfm.io/debugger22/" style="width:100%;height:100%;border:none;"></iframe>
-</body>
+				<!-- Header -->
+					<header id="header">
+						<h1>Sudhanshu Mishra</h1>
+						<p>Open Source &nbsp;&bull;&nbsp; Python &nbsp;&bull;&nbsp; Android &nbsp;&bull;&nbsp; Web</p>
+						<nav>
+							<ul>
+								<li><a href="https://twitter.com/debugger22" class="fa fa-twitter"><span>Twitter</span></a></li>
+								<li><a href="https://facebook.com/Mrsud" class="fa fa-facebook"><span>Facebook</span></a></li>
+								<li><a href="https://github.com/debugger22" class="fa fa-github"><span>Github</span></a></li>
+								<li><a href="http://blog.sudhanshumishra.in" class="fa fa-wordpress"><span>Blog</span></a></li>
+								<li><a href="mailto:mrsud94@gmail.com" class="fa fa-envelope-o"><span>Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Sudhanshu Mishra.</span>
+					</footer>
+			</div>
+		</div>
+	</body>
 </html>
