--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/debugger22" class="fa fa-twitter"><span>Twitter</span></a></li>
-								<li><a href="https://facebook.com/Mrsud" class="fa fa-facebook"><span>Facebook</span></a></li>
+								<!--<li><a href="https://facebook.com/Mrsud" class="fa fa-facebook"><span>Facebook</span></a></li>-->
 								<li><a href="https://github.com/debugger22" class="fa fa-github"><span>Github</span></a></li>
 								<li><a href="http://blog.sudhanshumishra.in" class="fa fa-wordpress"><span>Blog</span></a></li>
 								<li><a href="mailto:mrsud94@gmail.com" class="fa fa-envelope-o"><span>Email</span></a></li>
