--- a/authors.html
+++ b/authors.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>Shortlog - Authors</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="http://www.sudhanshumishra.in/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,16 +12,16 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Shortlog </a></h1>
+                <h1><a href="http://www.sudhanshumishra.in/">Shortlog </a></h1>
                 <nav><ul>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="http://www.sudhanshumishra.in/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Shortlog</h1>
     <ul>
-        <li><a href="/author/sudhanshu-mishra-noreplybloggercom.html">Sudhanshu Mishra (noreply@blogger.com)</a> (25)</li>
+        <li><a href="http://www.sudhanshumishra.in/author/sudhanshu-mishra-noreplybloggercom.html">Sudhanshu Mishra (noreply@blogger.com)</a> (25)</li>
     </ul>
 </section>
 
@@ -29,20 +29,11 @@
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
+                            <li><a href="https://github.com/debugger22">GitHub</a></li>
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
-                <div class="social">
-                        <h2>social</h2>
-                        <ul>
-
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
-                        </ul>
-                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
