--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>Shortlog - Tags</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="http://www.sudhanshumishra.in/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,44 +12,44 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Shortlog </a></h1>
+                <h1><a href="http://www.sudhanshumishra.in/">Shortlog </a></h1>
                 <nav><ul>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="http://www.sudhanshumishra.in/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Shortlog</h1>
     <ul>
-        <li><a href="/tag/android.html">Android</a> (2)</li>
-        <li><a href="/tag/aws.html">aws</a> (1)</li>
-        <li><a href="/tag/binpy.html">BinPy</a> (2)</li>
-        <li><a href="/tag/bios.html">BIOS</a> (1)</li>
-        <li><a href="/tag/capastr.html">CapaStr</a> (1)</li>
-        <li><a href="/tag/chrome.html">Chrome</a> (1)</li>
-        <li><a href="/tag/circuit-design.html">Circuit Design</a> (1)</li>
-        <li><a href="/tag/cloud.html">cloud</a> (1)</li>
-        <li><a href="/tag/cordova.html">Cordova</a> (1)</li>
-        <li><a href="/tag/docker.html">docker</a> (1)</li>
-        <li><a href="/tag/electronics.html">Electronics</a> (2)</li>
-        <li><a href="/tag/git.html">git</a> (1)</li>
-        <li><a href="/tag/github.html">github</a> (1)</li>
-        <li><a href="/tag/google.html">Google</a> (1)</li>
-        <li><a href="/tag/gsoc.html">gsoc</a> (11)</li>
-        <li><a href="/tag/ios.html">iOS</a> (1)</li>
-        <li><a href="/tag/javascript.html">JavaScript</a> (1)</li>
-        <li><a href="/tag/jquerymobile.html">JQueryMobile</a> (1)</li>
-        <li><a href="/tag/lenovo.html">Lenovo</a> (1)</li>
-        <li><a href="/tag/lenovo-g580.html">Lenovo G580</a> (1)</li>
-        <li><a href="/tag/linux.html">Linux</a> (1)</li>
-        <li><a href="/tag/phonegap.html">PhoneGap</a> (1)</li>
-        <li><a href="/tag/physics.html">physics</a> (7)</li>
-        <li><a href="/tag/python.html">python</a> (1)</li>
-        <li><a href="/tag/server.html">Server</a> (2)</li>
-        <li><a href="/tag/sympy.html">sympy</a> (11)</li>
-        <li><a href="/tag/tricks.html">Tricks</a> (1)</li>
-        <li><a href="/tag/ubuntu.html">Ubuntu</a> (2)</li>
-        <li><a href="/tag/web.html">Web</a> (2)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/android.html">Android</a> (2)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/aws.html">aws</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/binpy.html">BinPy</a> (2)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/bios.html">BIOS</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/capastr.html">CapaStr</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/chrome.html">Chrome</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/circuit-design.html">Circuit Design</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/cloud.html">cloud</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/cordova.html">Cordova</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/docker.html">docker</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/electronics.html">Electronics</a> (2)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/git.html">git</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/github.html">github</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/google.html">Google</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> (11)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/ios.html">iOS</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/javascript.html">JavaScript</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/jquerymobile.html">JQueryMobile</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/lenovo.html">Lenovo</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/lenovo-g580.html">Lenovo G580</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/linux.html">Linux</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/phonegap.html">PhoneGap</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/physics.html">physics</a> (7)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/python.html">python</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/server.html">Server</a> (2)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> (11)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/tricks.html">Tricks</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/ubuntu.html">Ubuntu</a> (2)</li>
+        <li><a href="http://www.sudhanshumishra.in/tag/web.html">Web</a> (2)</li>
     </ul>
 </section>
 
@@ -57,20 +57,11 @@
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
+                            <li><a href="http://blog.sudhanshumishra.in/">Old blog</a></li>
+                            <li><a href="https://github.com/debugger22">GitHub</a></li>
+                            <li><a href="https://twitter.com/debugger22">Twitter</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
-                <div class="social">
-                        <h2>social</h2>
-                        <ul>
-
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
-                        </ul>
-                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
