--- a/authors.html
+++ b/authors.html
@@ -21,7 +21,8 @@
 <section id="content" class="body">
     <h1>Authors on Shortlog</h1>
     <ul>
-        <li><a href="http://www.sudhanshumishra.in/author/sudhanshu-mishra-noreplybloggercom.html">Sudhanshu Mishra (noreply@blogger.com)</a> (25)</li>
+        <li><a href="http://www.sudhanshumishra.in/author/sudhanshu-mishra.html">Sudhanshu Mishra</a> (1)</li>
+        <li><a href="http://www.sudhanshumishra.in/author/sudhanshu-mishra-noreplybloggercom.html">Sudhanshu Mishra (noreply@blogger.com)</a> (24)</li>
     </ul>
 </section>
 
