--- a/search.html
+++ b/search.html
@@ -7,6 +7,8 @@
         <meta name="author" content="Sudhanshu Mishra" />
         <meta name="copyright" content="Sudhanshu Mishra" />
 
+        <meta name="description" content="Search results for Shortlog blog.
+" />
         <meta property="og:type" content="article" />
         <meta name="twitter:card" content="summary">
 
@@ -21,10 +23,17 @@
 </title>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="http://www.sudhanshumishra.in/theme/css/pygments.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="http://www.sudhanshumishra.in/theme/tipuesearch/tipuesearch.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="http://www.sudhanshumishra.in/theme/css/elegant.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="http://www.sudhanshumishra.in/theme/css/custom.css" media="screen">
+<link rel="stylesheet" href="http://www.sudhanshumishra.in/theme/css/style.min.css?7aeecf36">
+        <link rel="shortcut icon" href="http://www.sudhanshumishra.in/theme/images/favicon.ico" type="image/x-icon" type="image/png" />
+        <link rel="icon" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-152x152.png" type="image/png" />
+        <link rel="apple-touch-icon" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon.png"  type="image/png" />
+        <link rel="apple-touch-icon" sizes="57x57" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-57x57.png" type="image/png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-72x72.png" type="image/png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-76x76.png" type="image/png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-114x114.png" type="image/png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-120x120.png" type="image/png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-144x144.png" type="image/png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="http://www.sudhanshumishra.in/theme/images/apple-touch-icon-152x152.png" type="image/png" />
     </head>
     <body>
         <div id="content-sans-footer">
@@ -67,12 +76,12 @@
 <footer>
 <div id="footer">
     <ul class="footer-content">
+        <li class="elegant-license">Licensed under MIT License</li>
         <li class="elegant-power">Powered by <a href="http://getpelican.com/" title="Pelican Home Page">Pelican</a>. Theme: <a href="http://oncrashreboot.com/pelican-elegant" title="Theme Elegant Home Page">Elegant</a> by <a href="http://oncrashreboot.com" title="Talha Mansoor Home Page">Talha Mansoor</a></li>
     </ul>
 </div>
 </footer><script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="http://www.sudhanshumishra.in/theme/tipuesearch/tipuesearch_set.js"></script>
-<script type="text/javascript" src="http://www.sudhanshumishra.in/theme/tipuesearch/tipuesearch.min.js"></script>
+<script type="text/javascript" src="http://www.sudhanshumishra.in/theme/tipuesearch/tipuesearch.packed.min.js?8f3a37fd"></script>
 <script>
 $(document).ready(function() {
      $('#tipue_search_input').tipuesearch({
