--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <meta property="og:type" content="article" />
         <meta name="twitter:card" content="summary">
 
-<meta property="og:title" content="Shortlog"/>
-<meta name="twitter:title" content="Shortlog">
+<meta property="og:title" content="Python, Android, Open Source"/>
+<meta name="twitter:title" content="Python, Android, Open Source">
 <meta property="og:url" content="http://www.sudhanshumishra.in" />
 <meta property="og:description" content="A blog by Sudhanshu Mishra" />
 <meta name="twitter:description" content="A blog by Sudhanshu Mishra">
@@ -62,13 +62,39 @@
                 <div class="span1"></div>
                 <div class="span10">
 <div class="row-fluid">
+    <header class="page-header span12">
+    <h1><a href="http://www.sudhanshumishra.in">Python, Android, Open Source</a></h1>
+    </header>
 
     <div class="row-fluid">
+        <div class="span8">
+            <header>
+            <h1 id="about-me">About me</h1>
+            </header>
+            <div class="article-content">
+                <div itemscope itemtype="http://schema.org/Person"><p>My name
+        is <span itemprop="name">Sudhanshu Mishra</span>.</p>
 
+        <p>I work on few Android apps and some open source projects including SymPy.</p>
+        <p>I mostly work in Python, Java,  C and JavaScript on Linux.</p>
+        </div>
+            </div>
+        </div>
+
+        <div class="span4">
+            <header>
+            <h1 id="my-projects">My Projects</h1>
+            </header>
+            <ul class="list-all-articles">
+                <li>
+                <a href="https://github.com/debugger22/Jarvis" title="Jarvis">Jarvis</a> <span class="proj-desc">As the name suggests.</span>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div class="row-fluid">
-        <div class="span8 offset2">
+        <div class="span12">
             <header>
             <h1 id="recent-posts">Recent Posts <a id="allposts" href="http://www.sudhanshumishra.in/archives.html">all posts</a></h1>
             </header>
