--- a/gsoc-14-first-week.html
+++ b/gsoc-14-first-week.html
@@ -143,10 +143,10 @@ There were no hiccups yet!
 <section>
     <h2>Keep Reading</h2>
 <ul class="related-posts-list">
-<li><a href="http://www.sudhanshumishra.in/gsoc14-progress-finishing-twave" title="GSoC&#39;14 Progress: Finishing TWave">GSoC'14 Progress: Finishing TWave</a></li>
 <li><a href="http://www.sudhanshumishra.in/gsoc14-third-week" title="GSoC&#39;14: Third week">GSoC'14: Third week</a></li>
 <li><a href="http://www.sudhanshumishra.in/gsoc14-progress-week-4-finished-medium-working-on-fermats-principle-and-snells-law" title="GSoC&#39;14 progress, week 4: finished medium, working on Fermat&#39;s principle and Snell&#39;s law">GSoC'14 progress, week 4: finished medium, working on Fermat's principle and Snell's law</a></li>
 <li><a href="http://www.sudhanshumishra.in/gsoc14-progress-week-5" title="GSoC&#39;14 progress, Week 5">GSoC'14 progress, Week 5</a></li>
+<li><a href="http://www.sudhanshumishra.in/gsoc14-progress-week-6" title="GSoC&#39;14 progress: Week 6">GSoC'14 progress: Week 6</a></li>
 <li><a href="http://www.sudhanshumishra.in/gsoc14-progress-working-with-geometry" title="GSoC&#39;14 Progress: Working with geometry">GSoC'14 Progress: Working with geometry</a></li>
 </ul>
 <hr />
