--- a/gsoc14-week-10-adding-more-to-utils.html
+++ b/gsoc14-week-10-adding-more-to-utils.html
@@ -136,11 +136,11 @@ That's all for now. Cheers!
 <section>
     <h2>Keep Reading</h2>
 <ul class="related-posts-list">
-<li><a href="http://www.sudhanshumishra.in/gsoc14-progress-week-4-finished-medium-working-on-fermats-principle-and-snells-law" title="GSoC&#39;14 progress, week 4: finished medium, working on Fermat&#39;s principle and Snell&#39;s law">GSoC'14 progress, week 4: finished medium, working on Fermat's principle and Snell's law</a></li>
+<li><a href="http://www.sudhanshumishra.in/gsoc-14-first-week" title="GSoC 14: First Week">GSoC 14: First Week</a></li>
 <li><a href="http://www.sudhanshumishra.in/gsoc14-progress-week-5" title="GSoC&#39;14 progress, Week 5">GSoC'14 progress, Week 5</a></li>
+<li><a href="http://www.sudhanshumishra.in/gsoc14-progress-week-6" title="GSoC&#39;14 progress: Week 6">GSoC'14 progress: Week 6</a></li>
 <li><a href="http://www.sudhanshumishra.in/gsoc14-progress-working-with-geometry" title="GSoC&#39;14 Progress: Working with geometry">GSoC'14 Progress: Working with geometry</a></li>
 <li><a href="http://www.sudhanshumishra.in/gsoc14-progress-finished-refraction-at-planar-surface" title="GSoC&#39;14 Progress: Finished refraction at planar surface">GSoC'14 Progress: Finished refraction at planar surface</a></li>
-<li><a href="http://www.sudhanshumishra.in/gsoc14-progress-week-12" title="GSoC&#39;14 progress: Week 12">GSoC'14 progress: Week 12</a></li>
 </ul>
 <hr />
 </section>
