--- a/setting-up-tornado-server-on-ubuntu-1204.html
+++ b/setting-up-tornado-server-on-ubuntu-1204.html
@@ -17,11 +17,9 @@
                 <nav><ul>
                     <li><a href="http://www.sudhanshumishra.in/category/android.html">Android</a></li>
                     <li class="active"><a href="http://www.sudhanshumishra.in/category/cloud-computing.html">Cloud Computing</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/electronics.html">Electronics</a></li>
                     <li><a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/javascript.html">JavaScript</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/linux.html">Linux</a></li>
                     <li><a href="http://www.sudhanshumishra.in/category/miscellaneous.html">Miscellaneous</a></li>
+                    <li><a href="http://www.sudhanshumishra.in/category/programming.html">Programming</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
