--- a/categories.html
+++ b/categories.html
@@ -17,21 +17,17 @@
                 <nav><ul>
                     <li><a href="http://www.sudhanshumishra.in/category/android.html">Android</a></li>
                     <li><a href="http://www.sudhanshumishra.in/category/cloud-computing.html">Cloud Computing</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/electronics.html">Electronics</a></li>
                     <li><a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/javascript.html">JavaScript</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/linux.html">Linux</a></li>
                     <li><a href="http://www.sudhanshumishra.in/category/miscellaneous.html">Miscellaneous</a></li>
+                    <li><a href="http://www.sudhanshumishra.in/category/programming.html">Programming</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="http://www.sudhanshumishra.in/category/android.html">Android</a></li>
     <li><a href="http://www.sudhanshumishra.in/category/cloud-computing.html">Cloud Computing</a></li>
-    <li><a href="http://www.sudhanshumishra.in/category/electronics.html">Electronics</a></li>
     <li><a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
-    <li><a href="http://www.sudhanshumishra.in/category/javascript.html">JavaScript</a></li>
-    <li><a href="http://www.sudhanshumishra.in/category/linux.html">Linux</a></li>
     <li><a href="http://www.sudhanshumishra.in/category/miscellaneous.html">Miscellaneous</a></li>
+    <li><a href="http://www.sudhanshumishra.in/category/programming.html">Programming</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
