Added about page

--- a/about-me.html
+++ b/about-me.html
@@ -34,7 +34,7 @@
 <li>GitHub: <a href="https://github.com/debugger22">https://github.com/debugger22</a></li>
 <li>Twitter: <a href="https://twitter.com/debugger22">https://twitter.com/debugger22</a></li>
 </ul>
-<p>My old blog is located <a href="blog.sudhanshumishra.in">here</a>.</p>
+<p>My old blog is located <a href="http://blog.sudhanshumishra.in">here</a>.</p>
 <p>My stack<strong>overflow</strong> profile:</p>
 <p><img alt="Sudhanshu Mishra" src="http://stackoverflow.com/users/flair/2083053.png?theme=clean" /></p>
 </section>
