Added about page

--- a/about-me.html
+++ b/about-me.html
@@ -28,7 +28,9 @@
     
     <p><img alt="Sudhanshu Mishra" src="https://avatars3.githubusercontent.com/u/2821646?v=3&amp;s=200" /></p>
 <p>I am Sudhanshu Mishra. I am a student at BITS Pilani Goa Campus, India.</p>
-<p>I like working on Android apps and cloud computing. I also contribute to an open source project SymPy which is a computer algebra system.</p>
+<p>I like working on Android apps and cloud computing. I also contribute to an open source project SymPy which is a computer algebra system written in pure Python. You can know more about the projects done by me on my GitHub profile.</p>
+<p>I like listening to music especially from A.R. Rehman, The Beatles, Eagles, Led Zeppelin and Imagine Dragons. I'm a Hacker news addict and also spend a lot of my time on Reddit.</p>
+<p>I am not available to hire at the moment.</p>
 <ul>
 <li>Personal Email: sudmishra01[at]gmail[dot]com</li>
 <li>GitHub: <a href="https://github.com/debugger22">https://github.com/debugger22</a></li>
